--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "request": "^2.88.2",
     "shelljs": "^0.8.5",
     "strong-soap": "^3.4.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "xmldom": "^0.6.0"
   }
 }
